[package]
name = "neige-calm-hello-world-plugin"
version = "0.1.0"
edition = "2021"
description = "Reference M3 plugin for neige-calm — proves the MCP wire end-to-end."
license = "MIT"
publish = false

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "signal", "sync", "time"] }

# Standalone workspace so the plugin builds independently of the kernel
# workspace at the repo root. Kernel-side `cargo check` therefore doesn't
# need to know this crate exists; the plugin author runs
# `cargo build --release` inside this directory.
[workspace]
